Changelog for GoodNews

- added plugin version and icons to action-toolbar
- reordered newsletter grid context menu (now it should be more logical)
- removed/disabled Delete action (menu and button) from mailing when sending is in progress 
- added action buttons to newsletters grid
- fixed a problem with send counter when timed out mails are detected
- the Mail Summary field is now able to grow in it's height when text is entered
- small graphical fixes


GoodNews 1.3.7-pl (2015-06-29)
--------------------------------------------------
- fixed a PHP warning in MODX error log
- added preset for Mandrill SMTP service settings
- added feature to let each container have it's own SMTP settings (overrides MODX system settings)
- added feature to let each container have it's own mail charset and mail encoding settings (overrides MODX system settings)


GoodNews 1.3.6-pl (2015-03-29)
--------------------------------------------------
- added French translation (thank's Julien Studer!)
- fixed missing english strings + small typo in lexicon
- fixed a bug when sorting the Subscribers grid by subscription date
- added indicator in mailing editor if mailing is in read-only mode (sending already started)
- fixed waring message when mailing resource is in read-only mode
- fixed some PHP warnings if collections field of mailing_meta is empty (happens for resources prior to version 1.3.0-pl)
- [#33] Integrate functionality to auto-detect images and convert physical image dimensions based on src or style attributes
- fixed a problem in ContentCollection snippet when using tplWrapper
- removed ContentCollectionSnippet output if collection is empty


GoodNews 1.3.5-pl (2014-12-10)
--------------------------------------------------
- added ability to click on newsletter title to edit the newsletter
- added a switch above Newsletters grid to quickly activate/deactivate send-processes