@@ -179,6 +179,7 @@ $_lang['goodnews.subscribers_desc']                                 = 'Verwalten
 $_lang['goodnews.modx_user_create']                                 = 'MODx Benutzer erstellen';
 $_lang['goodnews.subscribers_user_group']                           = 'Abonnenten Gruppe';
 $_lang['goodnews.subscribers_user_group_filter']                    = 'Filtern nach Gruppe...';
+$_lang['goodnews.subscribers_user_category_filter']                 = 'Filtern nach Kategorie...';
 $_lang['goodnews.subscribers_choose_user_group']                    = '(Abonnenten Gruppe wählen)';
 $_lang['goodnews.subscriber_username']                              = 'Benutzername';
 $_lang['goodnews.subscriber_groups_categories']                     = 'Abonnierte Gruppen und Kategorien';
@@ -196,9 +197,11 @@ $_lang['goodnews.subscriber_ip_manually']                           = 'manuell';
 $_lang['goodnews.subscriber_soft_bounces']                          = 'SB';
 $_lang['goodnews.subscriber_hard_bounces']                          = 'HB';
 $_lang['goodnews.subscriber_testdummy_filter']                      = 'Test Empfänger?';
+$_lang['goodnews.subscriber_active_filter']                         = 'Aktiviert?';
 $_lang['goodnews.subscriber_select_as_testdummy']                   = 'Abonnent ist Empfänger von Test-Mailings und Newsletters';
 $_lang['goodnews.subscribers_none']                                 = 'Keine Abonnenten';
 $_lang['goodnews.subscribers_no_group']                             = 'Keine Gruppe zugewiesen';
+$_lang['goodnews.subscribers_no_category']                          = 'Keine Kategorie zugewiesen';
 $_lang['goodnews.subscriber_update']                                = 'Abonnements bearbeiten';
 $_lang['goodnews.subscriber_remove_subscriptions']                  = 'Alle Abonnements entfernen';
 $_lang['goodnews.subscriber_remove_subscriptions_confirm']          = 'Sind Sie sicher, dass Sie alle Abonnements dieses Benutzers entfernen m&ouml;chten?';
