@@ -179,6 +179,7 @@ $_lang['goodnews.subscribers_desc']                                 = 'Manage yo
 $_lang['goodnews.modx_user_create']                                 = 'Create MODx User';
 $_lang['goodnews.subscribers_user_group']                           = 'Subscribers Group';
 $_lang['goodnews.subscribers_user_group_filter']                    = 'Filter by Group...';
+$_lang['goodnews.subscribers_user_category_filter']                 = 'Filter by Category...';
 $_lang['goodnews.subscribers_choose_user_group']                    = '(Choose subscribers group)';
 $_lang['goodnews.subscriber_username']                              = 'Username';
 $_lang['goodnews.subscriber_groups_categories']                     = 'Subscriber Groups and Categories';
@@ -196,9 +197,11 @@ $_lang['goodnews.subscriber_ip_manually']                           = 'manually'
 $_lang['goodnews.subscriber_soft_bounces']                          = 'SB';
 $_lang['goodnews.subscriber_hard_bounces']                          = 'HB';
 $_lang['goodnews.subscriber_testdummy_filter']                      = 'Test-recipient?';
+$_lang['goodnews.subscriber_active_filter']                         = 'Activated?';
 $_lang['goodnews.subscriber_select_as_testdummy']                   = 'Subscriber is recipient of test-mailings and newsletters';
 $_lang['goodnews.subscribers_none']                                 = 'No subscribers';
 $_lang['goodnews.subscribers_no_group']                             = 'No group assigned';
+$_lang['goodnews.subscribers_no_category']                          = 'No category assigned';
 $_lang['goodnews.subscriber_update']                                = 'Edit Subscriptions';
 $_lang['goodnews.subscriber_remove_subscriptions']                  = 'Remove All Subscriptions';
 $_lang['goodnews.subscriber_remove_subscriptions_confirm']          = 'Are you sure you want to remove all subscriptions of this user?';
