@@ -179,6 +179,7 @@ $_lang['goodnews.subscribers_desc']                                 = 'Gérer vo
 $_lang['goodnews.modx_user_create']                                 = 'Créer un utilisateur MODx';
 $_lang['goodnews.subscribers_user_group']                           = 'Groupe d\'inscrits';
 $_lang['goodnews.subscribers_user_group_filter']                    = 'Filtrer par groupe...';
+$_lang['goodnews.subscribers_user_category_filter']                 = 'Filtrer par catégorie...';
 $_lang['goodnews.subscribers_choose_user_group']                    = '(choisir le groupe d\'inscrits)';
 $_lang['goodnews.subscriber_username']                              = 'Nom d\'utilisateur';
 $_lang['goodnews.subscriber_groups_categories']                     = 'Groupe d\'inscrits et catégories';
@@ -196,9 +197,11 @@ $_lang['goodnews.subscriber_ip_manually']                           = 'manuellem
 $_lang['goodnews.subscriber_soft_bounces']                          = 'SB';
 $_lang['goodnews.subscriber_hard_bounces']                          = 'HB';
 $_lang['goodnews.subscriber_testdummy_filter']                      = 'Destinataire test?';
+$_lang['goodnews.subscriber_active_filter']                         = 'Activé?';
 $_lang['goodnews.subscriber_select_as_testdummy']                   = 'L\'inscrit est le destinataire des tests.';
 $_lang['goodnews.subscribers_none']                                 = 'Aucun inscrit';
 $_lang['goodnews.subscribers_no_group']                             = 'Aucun groupe assigné';
+$_lang['goodnews.subscribers_no_category']                          = 'Aucun catégorie assigné';
 $_lang['goodnews.subscriber_update']                                = 'Editer les Souscriptions';
 $_lang['goodnews.subscriber_remove_subscriptions']                  = 'Supprimer toutes les Souscriptions';
 $_lang['goodnews.subscriber_remove_subscriptions_confirm']          = 'Etes-vous sûr de vouloir supprimer toutes les souscriptions de cet utilisateur ?';
